Fixed bug #61221 - imagegammacorrect function loses alpha channel

When applying imagegammacorrect() the alpha channel is now fully retained, instead of being completely lost.